--- a/config.env
+++ b/config.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=3000
 USERNAME=hermann
 PASSWORD=123456
+MONGO_URI = "mongodb+srv://tours-api:zuPnIDsI4GVff9ZZ@tours.db4v4.mongodb.net/tours"
