--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "starter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . ",
     "lint:fix": "eslint --fix . ",
-    "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
-    "nodemon": "nodemon app.js"
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +19,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
@@ -27,8 +27,14 @@
     "prettier": "^2.5.1"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.2.6",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.5"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
